--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "koa": "^2.8.2",
         "koa-body": "^4.1.1",
         "koa-router": "^7.4.0",
+        "koa-static": "^5.0.0",
         "mysql2": "^1.7.0",
         "sequelize": "^5.19.4"
     },
