--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "jsonwebtoken": "^8.5.1",
         "koa": "^2.8.2",
         "koa-body": "^4.1.1",
+        "koa-jwt": "^3.6.0",
         "koa-router": "^7.4.0",
         "koa-static": "^5.0.0",
         "mysql2": "^1.7.0",
