--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "koa": "^2.8.2",
         "koa-body": "^4.1.1",
         "koa-jwt": "^3.6.0",
+        "koa-log4": "^2.3.2",
         "koa-router": "^7.4.0",
         "koa-static": "^5.0.0",
         "moment": "^2.24.0",
